--- a/services.html
+++ b/services.html
@@ -35,31 +35,19 @@
         </header>
     </head>
     <main>
-        <section id="homme">
-            <h2>Coupes homme</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Accusantium quos dolore quis saepe earum, accusamus pariatur rerum odit, 
-                officiis porro libero beatae dicta laboriosam debitis. 
-                Libero nisi eius accusamus numquam!</p>
-            <button>Ajouter au panier</button>
-        </section>
+        <button id="btn">Afficher nos services</button>
+        <section id="container">
+            <section id="homme">
+                <button>Ajouter au panier</button>
+            </section>
 
-        <section id="femme">
-            <h2>Coupes femme</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Accusantium quos dolore quis saepe earum, accusamus pariatur rerum odit, 
-                officiis porro libero beatae dicta laboriosam debitis. 
-                Libero nisi eius accusamus numquam!</p>
-            <button>Ajouter au panier</button>
-        </section>
+            <section id="femme">
+                <button>Ajouter au panier</button>
+            </section>
 
-        <section id="enfant">
-            <h2>Coupes enfant</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Accusantium quos dolore quis saepe earum, accusamus pariatur rerum odit, 
-                officiis porro libero beatae dicta laboriosam debitis. 
-                Libero nisi eius accusamus numquam!</p>
-            <button>Ajouter au panier</button>
+            <section id="enfant">
+                <button>Ajouter au panier</button>
+            </section>
         </section>
     </main>
 
