--- a/services.html
+++ b/services.html
@@ -11,6 +11,7 @@
         <!-- global -->
         <link rel="stylesheet" href="css/global.css">
         <!-- pour la page -->
+        <link rel="stylesheet" href="css/navbar.css">
         <!-- Navbar -->
 	    <link rel="stylesheet" href="css/navbar.css">
         
