--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
         <!-- global -->
         <link rel="stylesheet" href="css/global.css">
         <!-- pour la page -->
-        <link rel="stylesheet" href="css/navbar.css">
+        <link rel="stylesheet" href="css/services.css">
         <!-- Navbar -->
 	    <link rel="stylesheet" href="css/navbar.css">
         
@@ -38,6 +38,15 @@
     <main>
         <button id="btn">Afficher nos services</button>
         <section id="container">
+            <section id="1">
+                <button type="button" class="add-to-cart" data-id="1" data-name="Coupe homme" data-price="20,00">Ajouter au panier</button>
+            </section>
+            <section id="2">
+                <button type="button" class="add-to-cart" data-id="2" data-name="Coupe femme" data-price="25,00">Ajouter au panier</button>
+            </section>
+            <section id="3">
+                <button type="button" class="add-to-cart" data-id="3" data-name="Coupe enfant" data-price="15,00">Ajouter au panier</button>
+            </section>
         </section>
     </main>
 
