--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         
         <!-- main -->
         <main>
-            <section>
+            <section class="presentation">
                 <h2>Coupes homme</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Accusantium quos dolore quis saepe earum, accusamus pariatur rerum odit, 
@@ -81,7 +81,7 @@
                 <button>En savoir plus</button>
             </section>
 
-            <section>
+            <section class="presentation">
                 <h2>Coupes femme</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Accusantium quos dolore quis saepe earum, accusamus pariatur rerum odit, 
@@ -90,7 +90,7 @@
                 <button>En savoir plus</button>
             </section>
 
-            <section>
+            <section class="presentation">
                 <h2>Coupes enfant</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Accusantium quos dolore quis saepe earum, accusamus pariatur rerum odit, 
@@ -101,7 +101,7 @@
         </main>
 
         <!-- footer -->
-        <footer>
+        <footer id="footer">
             <!-- adresse -->
             <section>
                 <p>20 rue de Victor Hugo</p>
@@ -117,9 +117,9 @@
             </section>
 
             <!-- Mentions -->
-            <section>
+            <section id="mentions">
                 <span>Copyright 2021 Le Coiffeur</span>
-                <a>Mentions légales</a>
+                <a href="https://fr.wikipedia.org/wiki/Mentions_l%C3%A9gales">Mentions légales</a>
             </section>
         </footer>
         
